--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,6 +61,8 @@
 
 //orders
 @import "orders/new.scss";
+@import "orders/done.scss";
+@import "orders/failed.scss";
 
 //items
 @import "items/sell";
