correct リンクの有無や細かいデザインの変更 change いいねの有無やログインしているユーザによって表示されるアイテムを変更
add 仮置だったリンクを設定

change 本番環境でassets/imagesの画像が読み込まれるようにpathを変更

change 非ログイン状態で商品購入ページにアクセスできないように変更

add 出品ページへのリンクを設定

correct gem turbolinksが原因で発生するjsがリロードされないと読み込まれない問題を解決

correct 商品詳細ページの価格に￥の単位がないのを修正

correct トップページの出品アイコンにリンクを設定

correct 非ログインユーザが出品できないように変更

correct mypage/editのpathのタイポを修正

--- a/app/assets/stylesheets/mypages/edit.scss
+++ b/app/assets/stylesheets/mypages/edit.scss
@@ -20,14 +20,14 @@
       width: 70rem;
       text-align: center;
       padding: 7.2rem 1.6rem 2.4rem;
-      background-image: url(fmarket.jpg);
+      background-image: image-url("fmarket.jpg");
       &--image {
         height: 6rem;
         width: 6rem;
         border-radius: 50%;
         display: inline-block;
         vertical-align: middle;
-        background-image: url(user.jpg);
+        background-image: image-url("user.jpg");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: 50% 10%;
