--- a/app/assets/stylesheets/mypages/mypage.scss
+++ b/app/assets/stylesheets/mypages/mypage.scss
@@ -15,14 +15,14 @@ body {
         padding: 7.2rem 1.6rem 2.4rem;
         box-sizing: border-box;
         text-align: center;
-        background-image: url(fmarket.jpg);
+        background-image: image-url("fmarket.jpg");
         background-position: 50% 45%;
         background-size: cover;
         &__image {
           height: 6rem;
           width: 6rem;
           margin: 0, 32rem;
-          background-image: url(user.jpg);
+          background-image: image-url("user.jpg");
           border-radius: 50%;
           display: inline-block;
           vertical-align: middle;
@@ -115,7 +115,7 @@ body {
       font-weight: bold;
       color: #808080;
       background-color: #fff;
-      background-image: url("logo_gray");
+      background-image: image-url("logo_gray");
       background-size: 50% 50%;
       background-repeat: no-repeat;
       background-position: 50%;
