--- a/app/assets/stylesheets/orders/new.scss
+++ b/app/assets/stylesheets/orders/new.scss
@@ -12,15 +12,14 @@
   background-color: rgb(245, 245, 245);
 }
 
-.headre-logo-wrapper{
+.headre-logo-wrapper {
   display: block;
-  
 }
 .header-logo {
   height: 4.9rem;
   width: 18.5rem;
   display: inline-block;
-  background-image: url("fmarket_logo_red");
+  background-image: image-url("fmarket_logo_red");
   background-repeat: no-repeat;
 }
 
@@ -119,7 +118,7 @@
         font-size: 1.44rem;
         font-weight: bolder;
       }
-      &__buy-button-red{
+      &__buy-button-red {
         @extend .buy-panel__item-detail-inner__buy-button;
         background-color: $red;
       }
