--- a/app/assets/stylesheets/signups/footer.scss
+++ b/app/assets/stylesheets/signups/footer.scss
@@ -38,7 +38,7 @@
   margin-top: 3rem;
   margin-left: 32rem;
   display: block;
-  background-image: url("logo_gray");
+  background-image: image-url("logo_gray");
   background-repeat: no-repeat;
 }
 
