--- a/app/views/homes/_postitem.html.haml
+++ b/app/views/homes/_postitem.html.haml
@@ -1,6 +1,7 @@
-.PostItems
-    .PostItems__Button 
-        出品
-        .PostItems__Icon 
-            %i.fas.fa-camera.fa-3x
+= link_to sell_items_path do
+    .PostItems
+        .PostItems__Button
+            出品
+            .PostItems__Icon
+                %i.fas.fa-camera.fa-3x
 
