--- a/app/views/mypages/purchase.html.haml
+++ b/app/views/mypages/purchase.html.haml
@@ -26,7 +26,7 @@
       %ul.purchase-report-areas-exsis
 
         %li.purchase-report-areas-exsis__area
-          = link_to "", class: "purchase-report-areas-exsis__area__link" do
+          = link_to "", data: { turbolinks: false}, class: "purchase-report-areas-exsis__area__link" do
 
             %figure.purchase-report-areas-exsis__area__link__figure
               = image_tag 'fmarket.jpg', class: 'purchase-report-areas-exsis__area__link__figure__image'
