変更(update)・削除(destroy)の実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -74,6 +74,7 @@
 @import "items/show";
 @import "items/chat";
 @import "items/modal";
+@import "items/edit";
 
 //その他
 @import "shard/signups_errors";
