--- a/app/assets/stylesheets/mypages/listings.scss
+++ b/app/assets/stylesheets/mypages/listings.scss
@@ -78,7 +78,7 @@
   font-weight: bold;
   color: #808080;
   background-color: #fff;
-  background-image: url("logo_gray");
+  background-image: image-url("logo_gray");
   background-size: 50% 50%;
   background-repeat: no-repeat;
   background-position: 50%;
