correct 商品詳細ページの価格に￥の単位がないのを修正

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -66,7 +66,7 @@
 
   .item-price-box
     %span.item-price-box__price
-      = @item.price
+      = "¥#{@item.price}"
     %span.item-price-box__tax (税込)
     %span.item-price-box__postage 着払い
 
