--- a/app/assets/stylesheets/mypages/sidebar.scss
+++ b/app/assets/stylesheets/mypages/sidebar.scss
@@ -3,6 +3,7 @@
   background-color: lightgoldenrodyellow;
   margin-right: 4rem;
   background: #fff;
+  float:left;
   &__list {
     .menu {
       &__item {
