--- a/app/views/mypages/logout.html.haml
+++ b/app/views/mypages/logout.html.haml
@@ -9,3 +9,4 @@
         = button_to "ログアウト", destroy_user_session_path, {method: :delete, class: "logout__form--button"}
     = render 'sidebar'
   = render "/homes/footer"
+  = render "/homes/postitem"
