--- a/app/views/signups/_footer.html.haml
+++ b/app/views/signups/_footer.html.haml
@@ -3,8 +3,7 @@
         %li.footer-top__list__text プライバシーポリシー
         %li.footer-top__list__text Fmarket利用規約
         %li.footer-top__list__text 特定商取引に関する表記
-.footer-logo
-
-
+= link_to root_path do
+    .footer-logo
 .footer-bottom
     %p.footer-bottom-text © 2019 Fmarket
