--- a/app/assets/stylesheets/mypages/address.scss
+++ b/app/assets/stylesheets/mypages/address.scss
@@ -2,3 +2,9 @@
   float: right;
   background-color: #fff;
 }
+.myapge-address_icon{
+  position: absolute;
+  right: 1.5rem;
+  top: 1.5rem;
+  font-size: 2.6rem;
+}
