--- a/app/views/addresses/new.html.haml
+++ b/app/views/addresses/new.html.haml
@@ -37,35 +37,37 @@
             = f.label :"お名前", class: 'user_address_name'
             %span.min #{required}
           .field-input
+            .field-input-name
+              - if @address.errors.messages[:lastname].any?
+                = f.text_field :lastname, placeholder: '例）佐藤', id: 'user_lastname_error', class: 'address_user_lastname_error'
+              - else
+                = f.text_field :lastname, placeholder: '例）佐藤', id: 'user_lastname', class: 'address_user_lastname'
+              - if @address.errors.messages[:firstname].any?
+                = f.text_field :firstname, placeholder: '例）太郎', id: 'user_firstname_error', class: 'address_user_firstname_error'
+              - else
+                = f.text_field :firstname, placeholder: '例）太郎', id: 'user_firstname', class: 'address_user_firstname'
             - if @address.errors.messages[:lastname].any?
-              = f.text_field :lastname, placeholder: '例）佐藤', id: 'user_lastname_error', class: 'address_user_lastname_error'
-            - else
-              = f.text_field :lastname, placeholder: '例）佐藤', id: 'user_lastname', class: 'address_user_lastname'
+              = render 'shard/signups_errors', errors: @address.errors.full_messages_for(:lastname)
             - if @address.errors.messages[:firstname].any?
-              = f.text_field :firstname, placeholder: '例）太郎', id: 'user_firstname_error', class: 'address_user_firstname_error'
-            - else
-              = f.text_field :firstname, placeholder: '例）太郎', id: 'user_firstname', class: 'address_user_firstname'
-          - if @address.errors.messages[:lastname].any?
-            = render 'shard/signups_errors', errors: @address.errors.full_messages_for(:lastname)
-          - if @address.errors.messages[:firstname].any?
-            = render 'shard/signups_errors', errors: @address.errors.full_messages_for(:firstname)
+              = render 'shard/signups_errors', errors: @address.errors.full_messages_for(:firstname)
         .field
           .field-label
             = f.label :"お名前カナ", class: 'user_address_name_kana'
             %span.min #{required}
           .field-input
+            .field-input-name
+              - if @address.errors.messages[:lastname_kana].any?
+                = f.text_field :lastname_kana, placeholder: '例）サトウ', id: 'user_lastname_kana_error', class: 'address_user_lastname_kana_error'
+              - else
+                = f.text_field :lastname_kana, placeholder: '例）サトウ', id: 'user_lastname_kana', class: 'address_user_lastname_kana'
+              - if @address.errors.messages[:firstname_kana].any?
+                = f.text_field :firstname_kana, placeholder: '例）タロウ', id: 'user_firstname_kana_error', class: 'address_user_firstname_kana_error'
+              - else
+                = f.text_field :firstname_kana, placeholder: '例）タロウ', id: 'user_firstname_kana', class: 'address_user_firstname_kana'
             - if @address.errors.messages[:lastname_kana].any?
-              = f.text_field :lastname_kana, placeholder: '例）佐藤', id: 'user_lastname_kana_error', class: 'address_user_lastname_kana_error'
-            - else
-              = f.text_field :lastname_kana, placeholder: '例）サトウ', id: 'user_lastname_kana', class: 'address_user_lastname_kana'
+              = render 'shard/signups_errors', errors: @address.errors.full_messages_for(:lastname_kana)
             - if @address.errors.messages[:firstname_kana].any?
-              = f.text_field :firstname_kana, placeholder: '例）太郎', id: 'user_firstname_kana_error', class: 'address_user_firstname_kana_error'
-            - else
-              = f.text_field :firstname_kana, placeholder: '例）タロウ', id: 'user_firstname_kana', class: 'address_user_firstname_kana'
-          - if @address.errors.messages[:lastname_kana].any?
-            = render 'shard/signups_errors', errors: @address.errors.full_messages_for(:lastname_kana)
-          - if @address.errors.messages[:firstname_kana].any?
-            = render 'shard/signups_errors', errors: @address.errors.full_messages_for(:firstname_kana)
+              = render 'shard/signups_errors', errors: @address.errors.full_messages_for(:firstname_kana)
         .field
           .field-label
             = f.label :"郵便番号", class: 'address_postcode'
@@ -82,10 +84,11 @@
             %span.min #{required}
           .field-pulldown
             - if @address.errors.messages[:prefectures].any?
-              = f.select :prefectures, ["北海道","青森県","岩手県","宮城県","秋田県","山形県","福島県","茨城県","栃木県","群馬県","埼玉県","千葉県","東京都","神奈川県","新潟県","富山県","石川県","福井県","山梨県","長野県","岐阜県","静岡県","愛知県","三重県","滋賀県","京都府","大阪府","兵庫県","奈良県","和歌山県","鳥取県","島根県","岡山県","広島県","山口県","徳島県","香川県","愛媛県","高知県","福岡県","佐賀県","長崎県","熊本県","大分県","宮崎県","鹿児島県","沖縄県"], id: 'address_prefectures_error'
+              = f.collection_select :prefectures, @prefectures, :name, :name, {include_blank: "---"}, {class:'form-select',  id: 'address_prefectures_error'} 
+              .i{class: "fas fa-angle-down address_icon"}
               = render 'shard/signups_errors', errors: @address.errors.full_messages_for(:prefectures)
             - else
-              = f.select :prefectures, ["北海道","青森県","岩手県","宮城県","秋田県","山形県","福島県","茨城県","栃木県","群馬県","埼玉県","千葉県","東京都","神奈川県","新潟県","富山県","石川県","福井県","山梨県","長野県","岐阜県","静岡県","愛知県","三重県","滋賀県","京都府","大阪府","兵庫県","奈良県","和歌山県","鳥取県","島根県","岡山県","広島県","山口県","徳島県","香川県","愛媛県","高知県","福岡県","佐賀県","長崎県","熊本県","大分県","宮崎県","鹿児島県","沖縄県"], id: 'address_prefectures'
+              = f.collection_select :prefectures, @prefectures, :name, :name, {include_blank: "---"}, {class:'form-select',  id: 'address_prefectures'} 
               .i{class: "fas fa-angle-down address_icon"}
         .field
           .field-label
