--- a/app/views/mypages/identification.html.haml
+++ b/app/views/mypages/identification.html.haml
@@ -43,7 +43,7 @@
             .select-wrrapper
               .select-arrow
                 %i.fas.fa-chevron-down
-              = f.collection_select :prefectures, @prefectures, :id, :name, {include_blank: "---"}, {class:'form-select'} 
+              = f.collection_select :prefectures, @prefectures, :name, :name, {include_blank: "---"}, {class:'form-select'} 
 
           .identification__form--group
             %label.form-subject 市区町村
