【View】新規登録フッター調整

--- a/app/views/addresses/new.html.haml
+++ b/app/views/addresses/new.html.haml
@@ -131,4 +131,5 @@
           .firld-input
             = f.submit :"次へ進む", class: "next_submit", class: 'address_submit'
         .destory_wall
-= render 'signups/footer'
+.single-footer
+  = render 'signups/footer'
