--- a/app/views/creditcards/new.html.haml
+++ b/app/views/creditcards/new.html.haml
@@ -71,4 +71,5 @@
             #card_token
             = submit_tag "次へ進む" , name:"next_submit", class:"creditcard-submit",id: "token_submit"
         .destory_wall
-= render 'signups/footer'
+.single-footer
+  = render 'signups/footer'
